@startuml Database Diagram
!theme plain
skinparam backgroundColor #FFFFFF
skinparam linetype ortho

skinparam entity {
  BackgroundColor #E1F5FF
  BorderColor #0066CC
}

skinparam arrow {
  Color #0066CC
}

title Database Schema - Game Đoán Âm Thanh

entity "users" as users {
  * **id** : BIGINT <<PK>> <<AUTO_INCREMENT>>
  --
  * username : VARCHAR(255) <<UNIQUE>> <<NOT NULL>>
  * password : VARCHAR(255) <<NOT NULL>>
  * total_score : INT <<NOT NULL>> <<DEFAULT 0>>
  * correct_answers : INT <<NOT NULL>> <<DEFAULT 0>>
  * games_won : INT <<NOT NULL>> <<DEFAULT 0>>
  * games_played : INT <<NOT NULL>> <<DEFAULT 0>>
}

entity "games" as games {
  * **id** : BIGINT <<PK>> <<AUTO_INCREMENT>>
  --
  * player1_id : BIGINT <<FK>> <<NOT NULL>>
  * player2_id : BIGINT <<FK>> <<NOT NULL>>
  * player1_score : INT <<NOT NULL>> <<DEFAULT 0>>
  * player2_score : INT <<NOT NULL>> <<DEFAULT 0>>
  * current_round : INT <<NOT NULL>> <<DEFAULT 1>>
  * status : VARCHAR(50) <<NOT NULL>> <<ENUM: WAITING, IN_PROGRESS, FINISHED>>
  * created_at : DATETIME <<NOT NULL>>
  finished_at : DATETIME <<NULL>>
  winner_id : BIGINT <<FK>> <<NULL>>
  preferred_artist : VARCHAR(255) <<NULL>>
  preferred_genre : VARCHAR(255) <<NULL>>
}

entity "game_rounds" as game_rounds {
  * **id** : BIGINT <<PK>> <<AUTO_INCREMENT>>
  --
  * game_id : BIGINT <<FK>> <<NOT NULL>>
  * audio_segment_id : BIGINT <<FK>> <<NOT NULL>>
  * round_number : INT <<NOT NULL>>
  player1_answer : INT <<NULL>>
  player2_answer : INT <<NULL>>
  player1_time_ms : BIGINT <<NULL>>
  player2_time_ms : BIGINT <<NULL>>
  * player1_points : INT <<NOT NULL>> <<DEFAULT 0>>
  * player2_points : INT <<NOT NULL>> <<DEFAULT 0>>
  option1 : VARCHAR(255) <<NULL>>
  option2 : VARCHAR(255) <<NULL>>
  option3 : VARCHAR(255) <<NULL>>
  option4 : VARCHAR(255) <<NULL>>
  correct_answer : INT <<NULL>>
  * started_at : DATETIME <<NOT NULL>>
  finished_at : DATETIME <<NULL>>
}

entity "audios" as audios {
  * **id** : BIGINT <<PK>> <<AUTO_INCREMENT>>
  --
  * name : VARCHAR(255) <<NOT NULL>>
  * file_path : VARCHAR(500) <<NOT NULL>>
  artist_id : BIGINT <<FK>> <<NULL>>
  genre_id : BIGINT <<FK>> <<NULL>>
}

entity "artists" as artists {
  * **id** : BIGINT <<PK>> <<AUTO_INCREMENT>>
  --
  * name : VARCHAR(255) <<NOT NULL>> <<UNIQUE>>
}

entity "genres" as genres {
  * **id** : BIGINT <<PK>> <<AUTO_INCREMENT>>
  --
  * name : VARCHAR(255) <<NOT NULL>> <<UNIQUE>>
}

entity "audio_segments" as audio_segments {
  * **id** : BIGINT <<PK>> <<AUTO_INCREMENT>>
  --
  * audio_id : BIGINT <<FK>> <<NOT NULL>>
  * start_time : INT <<NOT NULL>>
  * end_time : INT <<NOT NULL>>
  * file_path : VARCHAR(500) <<NOT NULL>>
}

' Relationships
users ||--o{ games : "player1_id"
users ||--o{ games : "player2_id"
users ||--o{ games : "winner_id"

games ||--o{ game_rounds : "game_id"
audio_segments ||--o{ game_rounds : "audio_segment_id"
audios ||--o{ audio_segments : "audio_id"
artists ||--o{ audios : "artist_id"
genres ||--o{ audios : "genre_id"

note right of users
  Lưu thông tin người chơi
  và thống kê game
end note

note right of games
  Mỗi game có 2 người chơi
  Trạng thái: WAITING, IN_PROGRESS, FINISHED
end note

note right of game_rounds
  Mỗi round thuộc một game
  và sử dụng một audio segment
  Lưu câu trả lời và điểm
  của cả 2 người chơi
end note

note right of audios
  Thư viện các file âm thanh
  dùng cho game
  Liên kết với Artist và Genre
end note

note right of artists
  Danh sách các nghệ sĩ
  Mỗi artist có nhiều audio
end note

note right of genres
  Danh sách các thể loại
  Mỗi genre có nhiều audio
end note

note right of audio_segments
  Các đoạn audio đã được cắt
  từ file audio gốc
  Mỗi audio có thể có nhiều segments
end note

@enduml

